Fix HTML structure and update movie links

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
     <nav class="navbar">
       <a href="signin.html">SIGNIN</a>
-      <a href="categories.html" class="active">CATEGORIES</a>
+      <a href="index.html" class="active">CATEGORIES</a>
       <a href="download.html">DOWNLOAD</a>
       <a href="player.html">PLAYER</a>
       <a href="trailer.html">TRAILER</a>
@@ -370,4 +370,5 @@
   </script>
 </body>
 </html>
+
 
