Fix HTML encoding issues in download.html

--- a/download.html
+++ b/download.html
@@ -138,10 +138,11 @@
     </div>
     <nav class="navbar">
       <a href="signin.html?">SIGNIN</a>
-      <a href="categories.html?">CATEGORIES</a>
+      <a href="index.html?">CATEGORIES</a>
       <a href="download.html?" class="active">DOWNLOAD</a>
       <a href="player.html?">PLAYER</a>
       <a href="trailer.html?">TRAILER</a>
     </nav>
   </header>
+
 </body>
