Fix HTML encoding issues in payment.html

--- a/payment.html
+++ b/payment.html
@@ -79,7 +79,7 @@
 <body>
   <div class="payment-container">
     <h2>Make a Payment</h2>
-    <form action="categories.html" method="GET">
+    <form action="index.html" method="GET">
       <label for="plan">Select Plan</label>
       <select id="plan" name="plan" required>
         <option value="daily">$1 - Daily Access</option>
@@ -126,3 +126,4 @@
 
 </body>
 </html>
+
