Fix HTML encoding issues in player.html

--- a/player.html
+++ b/player.html
@@ -125,7 +125,7 @@
     </div>
     <nav class="navbar">
       <a href="signin.html">SIGNIN</a>
-      <a href="categories.html">CATEGORIES</a>
+      <a href="index.html">CATEGORIES</a>
       <a href="download.html?">DOWNLOAD</a>
       <a href="player.html?" class="active">PLAYER</a>
       <a href="trailer.html?">TRAILER</a>
@@ -221,3 +221,4 @@
 
 </body>
 </html>
+
