--- a/signin.html
+++ b/signin.html
@@ -81,7 +81,7 @@
 <body>
   <div class="container">
     <h2>Sign In</h2>
-    <form action="categories.html" method="GET">
+    <form action="index.html" method="GET">
   <input type="email" id="email" name="email" placeholder="Email or Phone" required>
   <input type="password" name="password" placeholder="Password" required>
   <button type="submit" class="btn">Sign In</button>
@@ -92,3 +92,4 @@
 
 </body>
 </html>
+
