Fix HTML encoding issues in trailer.html

--- a/trailer.html
+++ b/trailer.html
@@ -138,7 +138,7 @@
     </div>
     <nav class="navbar">
       <a href="signin.html">SIGNIN</a>
-      <a href="categories.html">CATEGORIES</a>
+      <a href="index.html">CATEGORIES</a>
       <a href="download.html?">DOWNLOAD</a>
       <a href="player.html?">PLAYER</a>
       <a href="trailer.html?" class="active">TRAILER</a>
@@ -214,3 +214,4 @@
 
 </body>
 </html>
+
